--- a/_sass/pages/_calendly.scss
+++ b/_sass/pages/_calendly.scss
@@ -3,4 +3,10 @@
   // @include breakpoint(large down) {
     margin-top: 84px;
   // }
+
+  #landing {
+    @include breakpoint(xlarge down) {
+      padding-top: 0;
+    }
+  }
 }
